--- a/app/views/slurry/current/business.html
+++ b/app/views/slurry/current/business.html
@@ -76,7 +76,7 @@
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk" data-module="govuk-button"
           >
-            Back to contact details
+            Back to details
           </button>
         {% endif %}
       </form>
