--- a/app/views/slurry/current/farmer-details.html
+++ b/app/views/slurry/current/farmer-details.html
@@ -35,33 +35,8 @@
           </label>
           <input class="govuk-input govuk-!-width-one-half" id="farmer-lastname" name="farmer-lastname" type="text" spellcheck="false" autocomplete="name" value="{{ data['farmer-lastname'] }}">
         </div>
-        <h2 class="govuk-heading-m govuk-!-padding-top-6">Gender</h2>
-        <div class="govuk-form-group">
-          <div id="event-name-hint" class="govuk-hint">
-                We collect this equality data to improve our future schemes
-          </div>
-          <div class="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="gender" name="gender" type="radio" value="Female" {{ checked("gender", "Female") }}>
-              <label class="govuk-label govuk-radios__label" for="gender">
-                Female
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="gender-2" name="gender" type="radio" value="Male" {{ checked("gender", "Male") }}  >
-              <label class="govuk-label govuk-radios__label" for="gender-2">
-                Male
-              </label>
-            </div>
-            <div class="govuk-radios__divider">or</div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="gender-4" name="gender" type="radio" value="Prefer not to say" {{ checked("gender", "Prefer not to say") }} >
-              <label class="govuk-label govuk-radios__label" for="gender-4">
-                Prefer not to say
-              </label>
-            </div>
-          </div>
-        </div>
+
+
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-email">
@@ -131,7 +106,7 @@
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
           >
-            Back to contact details
+            Back to details
           </button>
         {% endif %}
       </form>
