--- a/app/views/slurry/current/projects-impact.html
+++ b/app/views/slurry/current/projects-impact.html
@@ -39,7 +39,7 @@
                       }
                   },
                   hint: {
-                    text: "Select one option."
+                    text: "Select one option"
                 },
 
                   items: [
