--- a/app/views/slurry/current/views/layouts/GUIDANCESLURRY-PROD-V2.html
+++ b/app/views/slurry/current/views/layouts/GUIDANCESLURRY-PROD-V2.html
@@ -54,7 +54,7 @@ Farming Transformation Fund slurry acidification grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Get a grant to lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    <p class="gem-c-lead-paragraph"><p>Get a grant to improve economic and environmental performance and resilience through productive and innovative farming methods.</p>
 
   </div>
 </div>
