--- a/app/views/slurry/current/agent-details.html
+++ b/app/views/slurry/current/agent-details.html
@@ -105,7 +105,7 @@
           <button onclick="document.getElementById('mainForm').action='{{ detailsUrl }}'"
             class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
           >
-            Back to contact details
+            Back to details
           </button>
         {% endif %}
       </form>
