--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -23,16 +23,6 @@
 
 
 
-
-
-<p>Get a grant to improve economic and environmental performance and resilience through productive and innovative farming methods.</p>
-<p>The Farming Transformation Fund productivity grant is for: </p>
-<ul>
-  <li>the adoption of robotic and innovative equipment for crop and livestock production and harvesting</li>
-  <li>acidification infrastructure</li>
-  <li>more efficient use of livestock slurries, manures and digestate through acidification treatment</li>
-</ul>
-
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
@@ -41,7 +31,7 @@
       <li>slurry pipework </li>
     </ul>
 
-<h3 class="govuk-heading-s">Robotics, automation and innovation equipment </h3>
+<h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
       <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
