--- a/app/views/slurry/current/country-fail.html
+++ b/app/views/slurry/current/country-fail.html
@@ -8,10 +8,11 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
+
   <a class="govuk-back-link" href="country">Back</a>
 {% endblock %}
 
@@ -29,7 +30,7 @@
           text: 'Scotland, Wales and Northern Ireland have other grants available.'
       }) }}
 
-    
+
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
