--- a/app/views/slurry/current/reference-number.html
+++ b/app/views/slurry/current/reference-number.html
@@ -3,13 +3,14 @@
 {% block pageTitle %}
   Check all your answers
 {% endblock %}
+
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
 {% endblock %}
 {% block content %}
