--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -7,33 +7,45 @@
 <!--
 <span class="govuk-caption-xl">Prototypes</span>
 -->
-<span class="govuk-caption-xl">Grants Prototype</span>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+<span class="govuk-caption-xl">Productivity grant</span>
 <h1 class="govuk-heading-xl">
-  Slurry
+  Slurry prototype admin
 </h1>
 
 
-<table class="govuk-table">
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Prototype</th>
-      <th class="govuk-table__header" scope="col">Description</th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="/slurry/current/guidance">
-          Productivity grant
-        </a></td>
-      <td class="govuk-table__cell">Eligibility checker (v1.0)  <br/>
-        <span class="govuk-body govuk-!-font-size-14"># Last updated on 30 June 2021 @ 20:52 <Br/>
-        # Robotics not included</span>
-      </td>
-    </tr>
+      <div class="proto-admin">
+        <h2 class="govuk-heading-l">User research</h2>
+
+        <p class='govuk-list app-list--definition'>
+        <a href='/slurry/current/guidance' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund productivity grant</a></p>
+        <p class='govuk-list app-list--definition'>
+        <a href='/slurry/current/start' class="govuk-link--no-visited-state">Start page</a><br>
+        Specialist start page, hosted on GOV.UK</p>
+
+        <p class='govuk-list app-list--definition'>
+      </div>
 
 
-  </tbody>
-</table>
+      <div class="proto-admin">
+        <h2 class="govuk-heading-l">Design history</h2>
+                <p class='govuk-list app-list--definition'>
+                <p class='govuk-heading-m'>Version 1 (current )</p>
+                <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in test with users.</br><span class="govuk-body govuk-!-font-size-14"># Last updated on 2 July 2021<Br/>
+                # Robotics not included</span></p>
 
+
+
+                <p class='govuk-list app-list--definition'>
+                <a href='https://www.sketch.com/s/bc04f07a-1c5d-4173-8e97-941118e01749' class="govuk-link--no-visited-state" target="new">Sketch wireframes (opens in new tab)</a><br>
+                Up to date designs.</p>
+
+
+
+
+
+  </div>
 
 {% endblock %}
