--- a/app/views/slurry/current/check-details.html
+++ b/app/views/slurry/current/check-details.html
@@ -6,12 +6,13 @@
 
 {% block beforeContent %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-{{ govukPhaseBanner({
-  tag: {
-    text: "beta"
-  },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-}) }}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype"
+    },
+      html: 'This is a prototype. It is not a real service.'
+  }) }}
+
     <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
