--- a/app/views/slurry/current/country.html
+++ b/app/views/slurry/current/country.html
@@ -8,10 +8,11 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
+
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -57,7 +58,7 @@
         <br><br>
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
-      
+
       </form>
     </div>
     <div class="govuk-grid-column-one-third">
