--- a/app/views/slurry/current/grant.html
+++ b/app/views/slurry/current/grant.html
@@ -8,9 +8,9 @@ Potential grant funding
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
@@ -37,7 +37,7 @@ Potential grant funding
 
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
-    
+
 
     </form>
 
