--- a/app/views/slurry/current/planning-permission-fail.html
+++ b/app/views/slurry/current/planning-permission-fail.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{{ govukPhaseBanner({
+  tag: {
+    text: "prototype"
+  },
+  html: 'This is a prototype. It is not a real service.'
+}) }}
+
   <a class="govuk-back-link" href="planning-permission">Back</a>
 {% endblock %}
 
