--- a/app/views/slurry/current/project-about-fail.html
+++ b/app/views/slurry/current/project-about-fail.html
@@ -8,10 +8,11 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
+
   <a class="govuk-back-link" href="farming-type">Back</a>
 {% endblock %}
 
@@ -20,13 +21,14 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-          You have chosen 'Robotics, automation and innovation'
+          You have chosen 'Robotics and innovation'
         </h1>
-        <p>This grant is only available to 'Slurry acidification'</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>We will need to work on routes to go to the 'Robotics' journey.</li>
+        <p>This grant is only available to <strong>Slurry acidification</strong>.</p>
 
-        </ul>
+        <div class="govuk-inset-text">
+          We've started the desing process for routes on 'Robotics and innovation' journey.
+        </div>
+
         <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
         </p>
       </div>
