--- a/app/views/slurry/current/project-start.html
+++ b/app/views/slurry/current/project-start.html
@@ -8,9 +8,9 @@ Have you already started work on the project?
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
 
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
