--- a/app/views/slurry/current/tenancy.html
+++ b/app/views/slurry/current/tenancy.html
@@ -8,9 +8,9 @@
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
 {{ govukPhaseBanner({
   tag: {
-    text: "beta"
+    text: "prototype"
   },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  html: 'This is a prototype. It is not a real service.'
 }) }}
 
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
@@ -54,7 +54,7 @@
           <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
-      
+
       </form>
     </div>
 
