--- a/app/views/slurry/current/views/layouts/_BASEFULL.html
+++ b/app/views/slurry/current/views/layouts/_BASEFULL.html
@@ -12,7 +12,7 @@
 <!-- homepage header will always link to top level of that iteration, for example 'current' -->
 {% block beforeContent %}
 
-{{ govukPhaseBanner({  tag: {    text: "beta"  },  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'}) }}
+{{ govukPhaseBanner({  tag: {    text: "prototype"  },  html: 'This is a prototype. It is not a real service.'}) }}
 
 <a class="govuk-back-link" onclick="history.back();">Back</a>
 {% endblock %}
