--- a/app/views/slurry/current/business.html
+++ b/app/views/slurry/current/business.html
@@ -48,7 +48,7 @@
               Number of employees
           </label>
           <span id="employees-hint" class="govuk-hint">Full-time employees, including the owner</span>
-          <input class="govuk-input govuk-input--width-10" id="employees" name="employees" type="text" spellcheck="false" aria-describedby="employees-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['employees'] }}">
+          <input class="govuk-input govuk-input--width-4" id="employees" name="employees" type="text" spellcheck="false" aria-describedby="employees-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['employees'] }}">
         </div>
         <br>
         <div class="govuk-form-group">
@@ -57,7 +57,7 @@
           </label>
           <div class="govuk-input__wrapper">
           <div class="govuk-input__prefix" aria-hidden="true">£</div>
-          <input class="govuk-input govuk-input--width-5" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
+          <input class="govuk-input govuk-!-width-one-third" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
           </div>
         </div>
         <br>
@@ -66,7 +66,7 @@
               Single Business Identifier (SBI)
           </label>
           <span id="sbi-hint" class="govuk-hint">If you do not have an SBI, leave it blank</span>
-          <input class="govuk-input govuk-input--width-10" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
+          <input class="govuk-input govuk-!-width-one-third" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
         </div>
         <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
