--- a/app/views/slurry/current/check-details.html
+++ b/app/views/slurry/current/check-details.html
@@ -117,7 +117,7 @@
                           <p class="govuk-heading-m"><strong>Agent's details</strong></p>
                       </dt>
                       <dd class="govuk-summary-list__actions">
-                          <a class="govuk-link govuk-body" href="farmer-details">
+                          <a class="govuk-link govuk-body" href="agent-details">
                               Change<span class="govuk-visually-hidden">agent's details</span>
                           </a>
                       </dd>
