--- a/app/views/slurry/current/start.html
+++ b/app/views/slurry/current/start.html
@@ -34,9 +34,12 @@
           <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
           <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
         </ul>
-        <p>If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
-</p>
-<p>Check if you can apply for a Farming Transformation Fund slurry acidification grant</p>
+
+        <p><div class="govuk-inset-text">
+  If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
+</div></p>
+
+
       </div>
     <br>
     <div class="govuk-body">
